Notification messages to client implemented